--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="380dp"
+    android:layout_height="wrap_content"
     android:background="@color/primary"
     android:orientation="vertical">
 
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/swarmImage"
             android:layout_width="0dp"
-            android:layout_height="125dp"
+            android:layout_height="300dp"
             app:srcCompat="@drawable/bee"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
@@ -105,7 +105,7 @@
             tools:layout_editor_absoluteY="81dp" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/mapImageView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:srcCompat="@drawable/bee"
