--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -12,31 +12,35 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/beebg"
-        />
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/gateLoginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
         android:background="@drawable/bivouac_button"
         android:padding="8dp"
         android:text="Log In"
         android:textColor="@color/icons"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/gateRegisterButton"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/gateRegisterButton"
+        app:layout_constraintHorizontal_bias="0.597" />
 
     <Button
         android:id="@+id/gateRegisterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/bivouac_button"
         android:text="Register New Account"
         android:textColor="@color/icons"
-        app:layout_constraintLeft_toLeftOf="@+id/gateLoginButton"
-        app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="31dp"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
