--- a/app/src/main/res/layout/activity_new_swarm_report.xml
+++ b/app/src/main/res/layout/activity_new_swarm_report.xml
@@ -1,177 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_light"
-    tools:context="com.example.guest.iamhere.activities.NewSwarmReportActivity"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="81dp">
+    android:layout_width="match_parent"
+    tools:layout_editor_absoluteX="8dp"
+    tools:layout_editor_absoluteY="8dp">
 
-    <RadioGroup
-        android:id="@+id/radioGroupSize"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primary_light"
+        tools:context="com.example.guest.iamhere.activities.NewSwarmReportActivity"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="81dp">
+
+
+        <RadioGroup
+            android:id="@+id/radioGroupSize"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp">
+
+            <TextView
+                android:id="@+id/sizeLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="About how big is the swarm?"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/baseball"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Baseball"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/football"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Football"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/basketball"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Basketball"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/beachball"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Beachball"
+                android:theme="@style/MyRadioButton" />
+        </RadioGroup>
+
+        <RadioGroup
+            android:id="@+id/radioGroupAccessibility"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupSize"
+            tools:layout_editor_absoluteX="8dp">
+
+            <TextView
+                android:id="@+id/accessibilityLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="How accessible is the swarm?"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/reach"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="Within unassisted reach"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/hasLadder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="Will require a small ladder, which I can provide"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/ladder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="Will require a small ladder"
+                android:theme="@style/MyRadioButton" />
+
+            <RadioButton
+                android:id="@+id/tallLadder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="18dp"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="Will require a large ladder"
+                android:theme="@style/MyRadioButton" />
+
+        </RadioGroup>
 
         <TextView
-            android:id="@+id/sizeLabel"
-            android:layout_width="match_parent"
+            android:id="@+id/locationTextView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="About how big is the swarm?"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupAccessibility">
 
-        <RadioButton
-            android:id="@+id/baseball"
+        </TextView>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Baseball"
-            android:theme="@style/MyRadioButton" />
+            android:foregroundGravity="center"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
 
-        <RadioButton
-            android:id="@+id/football"
+        <Button
+            android:id="@+id/addImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Football"
-            android:theme="@style/MyRadioButton" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/bivouac_button"
+            android:drawableLeft="@drawable/ic_menu_camera"
+            android:padding="8dp"
+            android:text=" Take a picture"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/reportSwarmButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
 
-        <RadioButton
-            android:id="@+id/basketball"
+        <Button
+            android:id="@+id/reportSwarmButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Basketball"
-            android:theme="@style/MyRadioButton" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/bivouac_button"
+            android:padding="8dp"
+            android:text="Report Swarm"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addImageButton" />
 
-        <RadioButton
-            android:id="@+id/beachball"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Beachball"
-            android:theme="@style/MyRadioButton" />
-    </RadioGroup>
+    </android.support.constraint.ConstraintLayout>
 
-    <RadioGroup
-        android:id="@+id/radioGroupAccessibility"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupSize"
-        tools:layout_editor_absoluteX="8dp">
-
-        <TextView
-            android:id="@+id/accessibilityLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="How accessible is the swarm?"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-
-        <RadioButton
-            android:id="@+id/reach"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="false"
-            android:text="Within unassisted reach"
-            android:theme="@style/MyRadioButton" />
-
-        <RadioButton
-            android:id="@+id/hasLadder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="false"
-            android:text="Will require a small ladder, which I can provide"
-            android:theme="@style/MyRadioButton" />
-
-        <RadioButton
-            android:id="@+id/ladder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="false"
-            android:text="Will require a small ladder"
-            android:theme="@style/MyRadioButton" />
-
-        <RadioButton
-            android:id="@+id/tallLadder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="false"
-            android:text="Will require a large ladder"
-            android:theme="@style/MyRadioButton"
-            android:layout_marginBottom="18dp"/>
-
-    </RadioGroup>
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:id="@+id/locationTextView"
-        app:layout_constraintLeft_toLeftOf="@+id/radioGroupAccessibility"
-        app:layout_constraintRight_toRightOf="@+id/radioGroupAccessibility"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupAccessibility"
-        android:gravity="center">
-
-    </TextView>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:foregroundGravity="center"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
-        android:id="@+id/addImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bivouac_button"
-        android:text=" Take a picture"
-        android:padding="8dp"
-        android:visibility="invisible"
-        android:drawableLeft="@drawable/ic_menu_camera"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/radioGroupAccessibility"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/radioGroupAccessibility"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
-
-    <Button
-        android:id="@+id/reportSwarmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/bivouac_button"
-        android:padding="8dp"
-        android:text="Report Swarm"
-        app:layout_constraintLeft_toLeftOf="@+id/locationTextView"
-        app:layout_constraintRight_toRightOf="@+id/locationTextView"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="invisible"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/addImageButton"
-        app:layout_constraintVertical_bias="0.0" />
-
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
