--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -115,6 +115,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="@+id/swarmImage"
             app:layout_constraintLeft_toLeftOf="@+id/guideline"
             app:layout_constraintRight_toRightOf="parent"
