--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -43,7 +43,7 @@
             tools:layout_constraintLeft_creator="1" />
 
         <TextView
-            android:id="@+id/distanceTextView"
+            android:id="@+id/claimantTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -65,9 +65,9 @@
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:text="Size: The size of a __"
-            app:layout_constraintLeft_toLeftOf="@+id/distanceTextView"
-            app:layout_constraintRight_toRightOf="@+id/distanceTextView"
-            app:layout_constraintTop_toBottomOf="@+id/distanceTextView"
+            app:layout_constraintLeft_toLeftOf="@+id/claimantTextView"
+            app:layout_constraintRight_toRightOf="@+id/claimantTextView"
+            app:layout_constraintTop_toBottomOf="@+id/claimantTextView"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintLeft_creator="1" />
 
