--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -106,18 +106,40 @@
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
             android:layout_width="0dp"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel Claim"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyReportedSwarms"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyReportedSwarms" />
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            app:layout_constraintRight_toLeftOf="@+id/guideline2"
+            android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline2"
+            app:layout_constraintGuide_begin="192dp"
+            android:orientation="vertical" />
+
+        <Button
+            android:id="@+id/deleteReportButton"
+            android:layout_width="0dp"
+            android:background="@drawable/bivouac_button"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Delete Report"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms" />
 
     </android.support.constraint.ConstraintLayout>
 
