--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -28,7 +28,7 @@
             app:srcCompat="@drawable/bee"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
-            app:layout_constraintHorizontal_bias="0.415"
+            app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintVertical_bias="0.0" />
@@ -44,7 +44,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mapImageView"
+            app:layout_constraintTop_toBottomOf="@+id/guideline3"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1" />
 
@@ -122,21 +122,23 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:clickable="true"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bee"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline" />
+            app:layout_constraintLeft_toLeftOf="@+id/guideline"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/guideline3"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="212dp" />
+            app:layout_constraintGuide_begin="204dp" />
 
     </android.support.constraint.ConstraintLayout>
 
